@@ -1,5 +1,12 @@
 2006-02-24  Emmanuele Bassi  <ebassi@cvs.gnome.org>
 
+	* src/gdict-app.c (gdict_app_create_data_dir): remove the big
+	frickin' dialog, and just rename the file that's causing the error
+	by appending the '.pre-2-14' string to its name.  Let's hope this
+	is enough.
+
+2006-02-24  Emmanuele Bassi  <ebassi@cvs.gnome.org>
+
 	* src/gdict-window.c (gdict_window_lookup_end_cb): fix ngettext()
 	usage.
 
